# symphony

./: .gitignore  01_requirements.md  02_architecture.md  03_code_review.md  04_fault_tolerance_architecture.md  3_model_2_round_chat.py  5_model_planning_meeting.json  5_model_planning_meeting.py  ALIAS_CONFIG_v172.md  API_DOCS.md  ARCHITECTURE.md  BRAND_NAMING_STRATEGY.md  CHANGELOG.md  CITATION.cff  CODE_STANDARDS_V2.md  COLLABORATION_SUMMARY.md  COMPLETE_PROTOCOL_USAGE.md  COMPLETE_REPORT.md  CONTRIBUTING.md  DEBUG_V040_REPORTS.md  DEEP_DEBUG_V041_REPORTS.md  DEVELOPMENT_STORY.md  DEV_REPORT_v35.md  Dockerfile  ENHANCED_PROTOCOL_USAGE.md  EVOLUTION_ANALYSIS_REPORT.md  EVOLUTION_ANALYSIS_SUMMARY.md  FINAL_PROTOCOL_USAGE.md  GITHUB_RELEASE_MATERIALS.md  IDENTITY.md  INDEPENDENT_GUIDE.md  INSTALLATION.md  INSTALL_FOR_MODELS.md  MEMORY.md  MODELS.md  MODEL_REPORTS.md  MODEL_THOUGHT_REPORT.md  MULTI_MODEL_PROTOCOL_USAGE.md  NAME_IDEAS.md  OPENCLAW_CONFIG_LOADER.md  (+983 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
Kernel/:  INTENT_DEVELOPMENT.md  CONFLICT_REPORT.txt  DEVELOPMENT.md  DEVELOPMENT_PLAN.md  DISPATCH.md  DISPATCH_GUIDE.md  DISPATCH_RULES.md  KERNEL_ORDER.md  MEMORY_REPORT.md  README.md  __init__.py  a2a_protocol.py  adaptive_combo.py  adaptive_combo_v2.py  agent_skills_architecture.py  auto_init.py  circuit_breaker.py  collaboration.js  combo_engine.py  combo_scheduler.py  config_manager.py  context_bus.py  conversation_history.json  dialog_takeover.py  dispatch_manager.py  (+30 more)
pypi/: README.md  pyproject.toml  setup.py
pypi/src/symphony/: __init__.py
(+964 files in other folders)
