[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "symphony-ai"
version = "1.0.1"
description = "多模型协作调度系统 - Multi-Model Collaboration Dispatch System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "造梦者 & 交交", email = "songlei_www@qq.com"}
]
keywords = ["ai", "multi-model", "collaboration", "symphony", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/songleiwww/symphony"
Repository = "https://github.com/songleiwww/symphony"
Issues = "https://github.com/songleiwww/symphony/issues"

[tool.setuptools]
packages = ["symphony"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
symphony = ["*.json", "*.md"]
